--- a/graph.html
+++ b/graph.html
@@ -138,30 +138,49 @@
 0 [class="start active", fillcolor=green, fontsize=12, label=START, style=filled];
 "-1" [class=end, fillcolor=red, fontsize=12, label=END, style=filled];
 1 [class="", fontsize=12, label=utter_greet];
-2 [class="", fontsize=12, label="..."];
-3 [class="", fontsize=12, label=utter_goodbye];
-5 [class="", fontsize=12, label=utter_iamabot];
-7 [class="", fontsize=12, label=name_form];
-9 [class="", fontsize=12, label=restaurant_form];
-11 [class=intent, fillcolor=lightblue, label="bom dia", shape=rect, style=filled];
-12 [class=intent, fillcolor=lightblue, label=adios, shape=rect, style=filled];
-13 [class=intent, fillcolor=lightblue, label="estou falando com um robo?", shape=rect, style=filled];
-14 [class=intent, fillcolor=lightblue, label="Fernando é meu nome", shape=rect, style=filled];
-0 -> 2  [class="", key=NONE, label=""];
-0 -> 11  [class="", key=0];
-1 -> "-1"  [class="", key=NONE, label=""];
-2 -> 9  [class="", key=NONE, label=""];
-2 -> 12  [class="", key=0];
-2 -> 13  [class="", key=0];
-2 -> 14  [class="", key=0];
-3 -> "-1"  [class="", key=NONE, label=""];
+2 [class="", fontsize=12, label=utter_ask_matricula];
+3 [class="", fontsize=12, label=name_form];
+4 [class="", fontsize=12, label=utter_ask_help];
+5 [class="", fontsize=12, label=action_faq_comprovate];
+10 [class="", fontsize=12, label=utter_ask_professor];
+11 [class="", fontsize=12, label=professor_name_form];
+12 [class="", fontsize=12, label=action_buscar_professor];
+13 [class="", fontsize=12, label=utter_ask_help];
+14 [class="", fontsize=12, label="..."];
+15 [class="", fontsize=12, label=utter_goodbye];
+17 [class="", fontsize=12, label=utter_iamabot];
+18 [class=intent, fillcolor=lightblue, label=oe, shape=rect, style=filled];
+19 [class=intent, fillcolor=lightblue, label=thais, shape=rect, style=filled];
+20 [class=intent, fillcolor=lightblue, label="Minha matricula é a10101010", shape=rect, style=filled];
+21 [class=intent, fillcolor=lightblue, label="ver matricula", shape=rect, style=filled];
+22 [class=intent, fillcolor=lightblue, label="email do professor [nome_professor]", shape=rect, style=filled];
+23 [class=intent, fillcolor=lightblue, label="/inform_professor_name", shape=rect, style=filled];
+24 [class=intent, fillcolor=lightblue, label="até logo", shape=rect, style=filled];
+25 [class=intent, fillcolor=lightblue, label="estou falando com um humano?", shape=rect, style=filled];
+0 -> 14  [class="", key=NONE, label=""];
+0 -> 18  [class="", key=0];
+1 -> 19  [class="", key=0];
+2 -> 20  [class="", key=0];
+3 -> 4  [class="", key=NONE, label=""];
+4 -> 21  [class="", key=0];
+4 -> 22  [class="", key=0];
 5 -> "-1"  [class="", key=NONE, label=""];
-7 -> "-1"  [class="", key=NONE, label=""];
-9 -> 1  [class="", key=NONE, label=""];
-11 -> 1  [class="", key=0];
-12 -> 3  [class="", key=0];
-13 -> 5  [class="", key=0];
-14 -> 7  [class="", key=0];
+10 -> 23  [class="", key=0];
+11 -> 12  [class="", key=NONE, label=""];
+12 -> 13  [class="", key=NONE, label=""];
+13 -> "-1"  [class="", key=NONE, label=""];
+14 -> 24  [class="", key=0];
+14 -> 25  [class="", key=0];
+15 -> "-1"  [class="", key=NONE, label=""];
+17 -> "-1"  [class="", key=NONE, label=""];
+18 -> 1  [class="", key=0];
+19 -> 2  [class="", key=0];
+20 -> 3  [class="", key=0];
+21 -> 5  [class="", key=0];
+22 -> 10  [class="", key=0];
+23 -> 11  [class="", key=0];
+24 -> 15  [class="", key=0];
+25 -> 17  [class="", key=0];
 }
 `;
     drawGraph(graph);
