--- a/graph.html
+++ b/graph.html
@@ -141,102 +141,107 @@
 2 [class="", fontsize=12, label=name_form];
 3 [class="", fontsize=12, label=utter_examples];
 4 [class="", fontsize=12, label=utter_ask_help];
-5 [class="", fontsize=12, label=action_buscar_courses];
-6 [class="", fontsize=12, label=utter_ask_more_help];
-7 [class="", fontsize=12, label=action_clear_slots];
-12 [class="", fontsize=12, label=action_inform_do_register];
-28 [class="", fontsize=12, label=action_inform_redo_register];
-44 [class="", fontsize=12, label=action_buscar_internship];
-60 [class="", fontsize=12, label=action_faq_comprovate];
-76 [class="", fontsize=12, label=professor_name_form];
-77 [class="", fontsize=12, label=action_buscar_professor];
-94 [class="", fontsize=12, label=action_buscar_classes];
-110 [class="", fontsize=12, label=action_get_calendar];
-23685 [class="", fontsize=12, label="..."];
-23688 [class="", fontsize=12, label=utter_iamabot];
-23690 [class="", fontsize=12, label=action_bot_do];
-23691 [class=intent, fillcolor=lightblue, label=eae, shape=rect, style=filled];
-23692 [class=intent, fillcolor=lightblue, label="tipos de cursos", shape=rect, style=filled];
-23693 [class=intent, fillcolor=lightblue, label="documentos que preciso para matricula", shape=rect, style=filled];
-23694 [class=intent, fillcolor=lightblue, label="rematrícula", shape=rect, style=filled];
-23695 [class=intent, fillcolor=lightblue, label="como fazer estágio", shape=rect, style=filled];
-23696 [class=intent, fillcolor=lightblue, label=atestado, shape=rect, style=filled];
-23697 [class=intent, fillcolor=lightblue, label=contato, shape=rect, style=filled];
-23698 [class=intent, fillcolor=lightblue, label=segundo, shape=rect, style=filled];
-23699 [class=intent, fillcolor=lightblue, label="fim das ferias", shape=rect, style=filled];
-23700 [class=intent, fillcolor=lightblue, label=adios, shape=rect, style=filled];
-23701 [class=intent, fillcolor=lightblue, label="acho que não", shape=rect, style=filled];
-23702 [class=intent, fillcolor=lightblue, label="como fazer a matricula", shape=rect, style=filled];
-23703 [class=intent, fillcolor=lightblue, label="cursos do IFRS", shape=rect, style=filled];
-23704 [class=intent, fillcolor=lightblue, label="onde faço a rematricula", shape=rect, style=filled];
-23705 [class=intent, fillcolor=lightblue, label="fazer estagio", shape=rect, style=filled];
-23706 [class=intent, fillcolor=lightblue, label="quero um atestado", shape=rect, style=filled];
-23707 [class=intent, fillcolor=lightblue, label=contato, shape=rect, style=filled];
-23708 [class=intent, fillcolor=lightblue, label="disciplinas primeiro", shape=rect, style=filled];
-23709 [class=intent, fillcolor=lightblue, label="início das férias de inverno", shape=rect, style=filled];
-23710 [class=intent, fillcolor=lightblue, label=xau, shape=rect, style=filled];
-23711 [class=intent, fillcolor=lightblue, label="estou falando com um robô?", shape=rect, style=filled];
-23712 [class=intent, fillcolor=lightblue, label="o que tu pode fazer?", shape=rect, style=filled];
-0 -> 23685  [class="", key=NONE, label=""];
-0 -> 23691  [class="", key=0];
+5 [class="", fontsize=12, label=utter_ask_courses_modality];
+6 [class="", fontsize=12, label=action_get_courses];
+7 [class="", fontsize=12, label=action_get_info_course];
+8 [class="", fontsize=12, label=utter_ask_more_help];
+9 [class="", fontsize=12, label=action_goodbye_and_clear_slots];
+14 [class="", fontsize=12, label=action_inform_do_register];
+25 [class="", fontsize=12, label=utter_req_to_ask];
+33 [class="", fontsize=12, label=action_inform_redo_register];
+52 [class="", fontsize=12, label=action_get_doc_register];
+71 [class="", fontsize=12, label=professor_name_form];
+72 [class="", fontsize=12, label=action_get_professor_contact];
+92 [class="", fontsize=12, label=utter_ask_courses_modality];
+93 [class="", fontsize=12, label=action_get_classes];
+113 [class="", fontsize=12, label=action_get_calendar];
+10705 [class="", fontsize=12, label="..."];
+10708 [class="", fontsize=12, label=utter_iamabot];
+10710 [class="", fontsize=12, label=action_what_bot_do];
+10711 [class=intent, fillcolor=lightblue, label=oe, shape=rect, style=filled];
+10712 [class=intent, fillcolor=lightblue, label="quais cursos", shape=rect, style=filled];
+10713 [class=intent, fillcolor=lightblue, label="site para matricula", shape=rect, style=filled];
+10714 [class=intent, fillcolor=lightblue, label=rematricola, shape=rect, style=filled];
+10715 [class=intent, fillcolor=lightblue, label=atestado, shape=rect, style=filled];
+10716 [class=intent, fillcolor=lightblue, label="contato prof", shape=rect, style=filled];
+10717 [class=intent, fillcolor=lightblue, label="aulas de 2022", shape=rect, style=filled];
+10718 [class=intent, fillcolor=lightblue, label="fim das férias de verão", shape=rect, style=filled];
+10719 [class=intent, fillcolor=lightblue, label=subsequente, shape=rect, style=filled];
+10720 [class=intent, fillcolor=lightblue, label="eletrotécnica", shape=rect, style=filled];
+10721 [class=intent, fillcolor=lightblue, label="acho que não", shape=rect, style=filled];
+10722 [class=intent, fillcolor=lightblue, label=sempre, shape=rect, style=filled];
+10723 [class=intent, fillcolor=lightblue, label="quais documentos preciso para fazer a matricula", shape=rect, style=filled];
+10724 [class=intent, fillcolor=lightblue, label="cursos integrantes do IFRS", shape=rect, style=filled];
+10725 [class=intent, fillcolor=lightblue, label="link da rematricula", shape=rect, style=filled];
+10726 [class=intent, fillcolor=lightblue, label="mostrar comprovante de matricula", shape=rect, style=filled];
+10727 [class=intent, fillcolor=lightblue, label=email, shape=rect, style=filled];
+10728 [class=intent, fillcolor=lightblue, label="materias do segundo semestre", shape=rect, style=filled];
+10729 [class=intent, fillcolor=lightblue, label="calenário academico", shape=rect, style=filled];
+10730 [class=intent, fillcolor=lightblue, label=Superior, shape=rect, style=filled];
+10731 [class=intent, fillcolor=lightblue, label=adios, shape=rect, style=filled];
+10732 [class=intent, fillcolor=lightblue, label="você é um humano?", shape=rect, style=filled];
+10733 [class=intent, fillcolor=lightblue, label="faz o que?", shape=rect, style=filled];
+0 -> 10705  [class="", key=NONE, label=""];
+0 -> 10711  [class="", key=0];
 1 -> 2  [class="", key=NONE, label=""];
 2 -> 3  [class="", key=NONE, label=""];
 3 -> 4  [class="", key=NONE, label=""];
-4 -> 23692  [class="", key=0];
-4 -> 23693  [class="", key=0];
-4 -> 23694  [class="", key=0];
-4 -> 23695  [class="", key=0];
-4 -> 23696  [class="", key=0];
-4 -> 23697  [class="", key=0];
-4 -> 23698  [class="", key=0];
-4 -> 23699  [class="", key=0];
-5 -> 6  [class="", key=NONE, label=""];
-6 -> 23700  [class="", key=0];
-6 -> 23701  [class="", key=0];
-6 -> 23702  [class="", key=0];
-6 -> 23703  [class="", key=0];
-6 -> 23704  [class="", key=0];
-6 -> 23705  [class="", key=0];
-6 -> 23706  [class="", key=0];
-6 -> 23707  [class="", key=0];
-6 -> 23708  [class="", key=0];
-6 -> 23709  [class="", key=0];
-7 -> "-1"  [class="", key=NONE, label=""];
-12 -> 6  [class="", key=NONE, label=""];
-28 -> 6  [class="", key=NONE, label=""];
-44 -> 6  [class="", key=NONE, label=""];
-60 -> 6  [class="", key=NONE, label=""];
-76 -> 77  [class="", key=NONE, label=""];
-77 -> 6  [class="", key=NONE, label=""];
-94 -> 6  [class="", key=NONE, label=""];
-110 -> 6  [class="", key=NONE, label=""];
-23685 -> 23710  [class="", key=0];
-23685 -> 23711  [class="", key=0];
-23685 -> 23712  [class="", key=0];
-23688 -> "-1"  [class="", key=NONE, label=""];
-23690 -> "-1"  [class="", key=NONE, label=""];
-23691 -> 1  [class="", key=0];
-23692 -> 5  [class="", key=0];
-23693 -> 12  [class="", key=0];
-23694 -> 28  [class="", key=0];
-23695 -> 44  [class="", key=0];
-23696 -> 60  [class="", key=0];
-23697 -> 76  [class="", key=0];
-23698 -> 94  [class="", key=0];
-23699 -> 110  [class="", key=0];
-23700 -> 7  [class="", key=0];
-23701 -> 7  [class="", key=0];
-23702 -> 12  [class="", key=0];
-23703 -> 5  [class="", key=0];
-23704 -> 28  [class="", key=0];
-23705 -> 44  [class="", key=0];
-23706 -> 60  [class="", key=0];
-23707 -> 76  [class="", key=0];
-23708 -> 94  [class="", key=0];
-23709 -> 110  [class="", key=0];
-23710 -> 7  [class="", key=0];
-23711 -> 23688  [class="", key=0];
-23712 -> 23690  [class="", key=0];
+4 -> 10712  [class="", key=0];
+4 -> 10713  [class="", key=0];
+4 -> 10714  [class="", key=0];
+4 -> 10715  [class="", key=0];
+4 -> 10716  [class="", key=0];
+4 -> 10717  [class="", key=0];
+4 -> 10718  [class="", key=0];
+5 -> 10719  [class="", key=0];
+6 -> 10720  [class="", key=0];
+7 -> 8  [class="", key=NONE, label=""];
+8 -> 10721  [class="", key=0];
+8 -> 10722  [class="", key=0];
+9 -> "-1"  [class="", key=NONE, label=""];
+14 -> 8  [class="", key=NONE, label=""];
+25 -> 10723  [class="", key=0];
+25 -> 10724  [class="", key=0];
+25 -> 10725  [class="", key=0];
+25 -> 10726  [class="", key=0];
+25 -> 10727  [class="", key=0];
+25 -> 10728  [class="", key=0];
+25 -> 10729  [class="", key=0];
+33 -> 8  [class="", key=NONE, label=""];
+52 -> 8  [class="", key=NONE, label=""];
+71 -> 72  [class="", key=NONE, label=""];
+72 -> 8  [class="", key=NONE, label=""];
+92 -> 10730  [class="", key=0];
+93 -> 8  [class="", key=NONE, label=""];
+113 -> 8  [class="", key=NONE, label=""];
+10705 -> 10731  [class="", key=0];
+10705 -> 10732  [class="", key=0];
+10705 -> 10733  [class="", key=0];
+10708 -> "-1"  [class="", key=NONE, label=""];
+10710 -> "-1"  [class="", key=NONE, label=""];
+10711 -> 1  [class="", key=0];
+10712 -> 5  [class="", key=0];
+10713 -> 14  [class="", key=0];
+10714 -> 33  [class="", key=0];
+10715 -> 52  [class="", key=0];
+10716 -> 71  [class="", key=0];
+10717 -> 92  [class="", key=0];
+10718 -> 113  [class="", key=0];
+10719 -> 6  [class="", key=0];
+10720 -> 7  [class="", key=0];
+10721 -> 9  [class="", key=0];
+10722 -> 25  [class="", key=0];
+10723 -> 14  [class="", key=0];
+10724 -> 5  [class="", key=0];
+10725 -> 33  [class="", key=0];
+10726 -> 52  [class="", key=0];
+10727 -> 71  [class="", key=0];
+10728 -> 92  [class="", key=0];
+10729 -> 113  [class="", key=0];
+10730 -> 93  [class="", key=0];
+10731 -> 9  [class="", key=0];
+10732 -> 10708  [class="", key=0];
+10733 -> 10710  [class="", key=0];
 }
 `;
     drawGraph(graph);
