--- a/graph.html
+++ b/graph.html
@@ -138,30 +138,116 @@
 0 [class="start active", fillcolor=green, fontsize=12, label=START, style=filled];
 "-1" [class=end, fillcolor=red, fontsize=12, label=END, style=filled];
 1 [class="", fontsize=12, label=utter_greet];
-2 [class="", fontsize=12, label="..."];
-3 [class="", fontsize=12, label=utter_goodbye];
-5 [class="", fontsize=12, label=utter_iamabot];
-7 [class="", fontsize=12, label=name_form];
-9 [class="", fontsize=12, label=restaurant_form];
-11 [class=intent, fillcolor=lightblue, label="bom dia", shape=rect, style=filled];
-12 [class=intent, fillcolor=lightblue, label=adios, shape=rect, style=filled];
-13 [class=intent, fillcolor=lightblue, label="estou falando com um robo?", shape=rect, style=filled];
-14 [class=intent, fillcolor=lightblue, label="Fernando é meu nome", shape=rect, style=filled];
-0 -> 2  [class="", key=NONE, label=""];
-0 -> 11  [class="", key=0];
-1 -> "-1"  [class="", key=NONE, label=""];
-2 -> 9  [class="", key=NONE, label=""];
-2 -> 12  [class="", key=0];
-2 -> 13  [class="", key=0];
-2 -> 14  [class="", key=0];
-3 -> "-1"  [class="", key=NONE, label=""];
-5 -> "-1"  [class="", key=NONE, label=""];
-7 -> "-1"  [class="", key=NONE, label=""];
-9 -> 1  [class="", key=NONE, label=""];
-11 -> 1  [class="", key=0];
-12 -> 3  [class="", key=0];
-13 -> 5  [class="", key=0];
-14 -> 7  [class="", key=0];
+2 [class="", fontsize=12, label=name_form];
+3 [class="", fontsize=12, label=utter_examples];
+4 [class="", fontsize=12, label=utter_ask_help];
+5 [class="", fontsize=12, label=utter_ask_courses_modality];
+6 [class="", fontsize=12, label=action_get_courses];
+7 [class="", fontsize=12, label=action_get_info_course];
+8 [class="", fontsize=12, label=utter_ask_more_help];
+9 [class="", fontsize=12, label=action_goodbye_and_clear_slots];
+14 [class="", fontsize=12, label=action_inform_do_register];
+25 [class="", fontsize=12, label=utter_req_to_ask];
+33 [class="", fontsize=12, label=action_inform_redo_register];
+52 [class="", fontsize=12, label=requirement_form];
+53 [class="", fontsize=12, label=action_get_requirements];
+73 [class="", fontsize=12, label=action_get_doc_register];
+92 [class="", fontsize=12, label=professor_name_form];
+93 [class="", fontsize=12, label=action_get_professor_contact];
+113 [class="", fontsize=12, label=action_get_classes];
+132 [class="", fontsize=12, label=action_get_calendar];
+15945 [class="", fontsize=12, label="..."];
+15948 [class="", fontsize=12, label=utter_iamabot];
+15950 [class="", fontsize=12, label=action_what_bot_do];
+15951 [class=intent, fillcolor=lightblue, label=eae, shape=rect, style=filled];
+15952 [class=intent, fillcolor=lightblue, label="IFRS no estado", shape=rect, style=filled];
+15953 [class=intent, fillcolor=lightblue, label="quais documentos preciso para fazer a matricula", shape=rect, style=filled];
+15954 [class=intent, fillcolor=lightblue, label="rematrícula", shape=rect, style=filled];
+15955 [class=intent, fillcolor=lightblue, label="me diz quais formulários tem", shape=rect, style=filled];
+15956 [class=intent, fillcolor=lightblue, label="quero um comprovante", shape=rect, style=filled];
+15957 [class=intent, fillcolor=lightblue, label="profs do IFRS", shape=rect, style=filled];
+15958 [class=intent, fillcolor=lightblue, label="grade curricular", shape=rect, style=filled];
+15959 [class=intent, fillcolor=lightblue, label="calendario acadêmico", shape=rect, style=filled];
+15960 [class=intent, fillcolor=lightblue, label=Superior, shape=rect, style=filled];
+15961 [class=intent, fillcolor=lightblue, label="informática", shape=rect, style=filled];
+15962 [class=intent, fillcolor=lightblue, label=n, shape=rect, style=filled];
+15963 [class=intent, fillcolor=lightblue, label=s, shape=rect, style=filled];
+15964 [class=intent, fillcolor=lightblue, label="quais documentos preciso para fazer a matricula", shape=rect, style=filled];
+15965 [class=intent, fillcolor=lightblue, label="cursos ofertados", shape=rect, style=filled];
+15966 [class=intent, fillcolor=lightblue, label="site para rematrícula", shape=rect, style=filled];
+15967 [class=intent, fillcolor=lightblue, label="formulários", shape=rect, style=filled];
+15968 [class=intent, fillcolor=lightblue, label=atestado, shape=rect, style=filled];
+15969 [class=intent, fillcolor=lightblue, label="email dos prof", shape=rect, style=filled];
+15970 [class=intent, fillcolor=lightblue, label="disciplinas primeiro", shape=rect, style=filled];
+15971 [class=intent, fillcolor=lightblue, label="férias", shape=rect, style=filled];
+15972 [class=intent, fillcolor=lightblue, label=tchau, shape=rect, style=filled];
+15973 [class=intent, fillcolor=lightblue, label="estou falando com um humano?", shape=rect, style=filled];
+15974 [class=intent, fillcolor=lightblue, label="o que você faz?", shape=rect, style=filled];
+0 -> 15945  [class="", key=NONE, label=""];
+0 -> 15951  [class="", key=0];
+1 -> 2  [class="", key=NONE, label=""];
+2 -> 3  [class="", key=NONE, label=""];
+3 -> 4  [class="", key=NONE, label=""];
+4 -> 15952  [class="", key=0];
+4 -> 15953  [class="", key=0];
+4 -> 15954  [class="", key=0];
+4 -> 15955  [class="", key=0];
+4 -> 15956  [class="", key=0];
+4 -> 15957  [class="", key=0];
+4 -> 15958  [class="", key=0];
+4 -> 15959  [class="", key=0];
+5 -> 15960  [class="", key=0];
+6 -> 15961  [class="", key=0];
+7 -> 8  [class="", key=NONE, label=""];
+8 -> 15962  [class="", key=0];
+8 -> 15963  [class="", key=0];
+9 -> "-1"  [class="", key=NONE, label=""];
+14 -> 8  [class="", key=NONE, label=""];
+25 -> 15964  [class="", key=0];
+25 -> 15965  [class="", key=0];
+25 -> 15966  [class="", key=0];
+25 -> 15967  [class="", key=0];
+25 -> 15968  [class="", key=0];
+25 -> 15969  [class="", key=0];
+25 -> 15970  [class="", key=0];
+25 -> 15971  [class="", key=0];
+33 -> 8  [class="", key=NONE, label=""];
+52 -> 53  [class="", key=NONE, label=""];
+53 -> 8  [class="", key=NONE, label=""];
+73 -> 8  [class="", key=NONE, label=""];
+92 -> 93  [class="", key=NONE, label=""];
+93 -> 8  [class="", key=NONE, label=""];
+113 -> 8  [class="", key=NONE, label=""];
+132 -> 8  [class="", key=NONE, label=""];
+15945 -> 15972  [class="", key=0];
+15945 -> 15973  [class="", key=0];
+15945 -> 15974  [class="", key=0];
+15948 -> "-1"  [class="", key=NONE, label=""];
+15950 -> "-1"  [class="", key=NONE, label=""];
+15951 -> 1  [class="", key=0];
+15952 -> 5  [class="", key=0];
+15953 -> 14  [class="", key=0];
+15954 -> 33  [class="", key=0];
+15955 -> 52  [class="", key=0];
+15956 -> 73  [class="", key=0];
+15957 -> 92  [class="", key=0];
+15958 -> 113  [class="", key=0];
+15959 -> 132  [class="", key=0];
+15960 -> 6  [class="", key=0];
+15961 -> 7  [class="", key=0];
+15962 -> 9  [class="", key=0];
+15963 -> 25  [class="", key=0];
+15964 -> 14  [class="", key=0];
+15965 -> 5  [class="", key=0];
+15966 -> 33  [class="", key=0];
+15967 -> 52  [class="", key=0];
+15968 -> 73  [class="", key=0];
+15969 -> 92  [class="", key=0];
+15970 -> 113  [class="", key=0];
+15971 -> 132  [class="", key=0];
+15972 -> 9  [class="", key=0];
+15973 -> 15948  [class="", key=0];
+15974 -> 15950  [class="", key=0];
 }
 `;
     drawGraph(graph);
