--- a/bot/graph.html
+++ b/bot/graph.html
@@ -138,212 +138,145 @@
 0 [class="start active", fillcolor=green, fontsize=12, label=START, style=filled];
 "-1" [class=end, fillcolor=red, fontsize=12, label=END, style=filled];
 1 [class="", fontsize=12, label=utter_greet];
-2 [class="", fontsize=12, label=name_form];
-3 [class="", fontsize=12, label=utter_examples];
-4 [class="", fontsize=12, label=utter_ask_help];
-5 [class="", fontsize=12, label=utter_ask_courses_modality];
-6 [class="", fontsize=12, label=action_get_courses];
-7 [class="", fontsize=12, label=action_get_info_course];
-8 [class="", fontsize=12, label=utter_ask_more_help];
-9 [class="", fontsize=12, label=action_goodbye_and_clear_slots];
-14 [class="", fontsize=12, label=action_inform_do_register];
-25 [class="", fontsize=12, label=utter_req_to_ask];
-33 [class="", fontsize=12, label=action_inform_redo_register];
-<<<<<<< HEAD
-52 [class="", fontsize=12, label=action_get_doc_register];
-71 [class="", fontsize=12, label=professor_name_form];
-72 [class="", fontsize=12, label=action_get_professor_contact];
-92 [class="", fontsize=12, label=utter_ask_courses_modality];
-93 [class="", fontsize=12, label=action_get_classes];
-113 [class="", fontsize=12, label=action_get_calendar];
-10705 [class="", fontsize=12, label="..."];
-10708 [class="", fontsize=12, label=utter_iamabot];
-10710 [class="", fontsize=12, label=action_what_bot_do];
-10711 [class=intent, fillcolor=lightblue, label=oe, shape=rect, style=filled];
-10712 [class=intent, fillcolor=lightblue, label="quais cursos", shape=rect, style=filled];
-10713 [class=intent, fillcolor=lightblue, label="site para matricula", shape=rect, style=filled];
-10714 [class=intent, fillcolor=lightblue, label=rematricola, shape=rect, style=filled];
-10715 [class=intent, fillcolor=lightblue, label=atestado, shape=rect, style=filled];
-10716 [class=intent, fillcolor=lightblue, label="contato prof", shape=rect, style=filled];
-10717 [class=intent, fillcolor=lightblue, label="aulas de 2022", shape=rect, style=filled];
-10718 [class=intent, fillcolor=lightblue, label="fim das férias de verão", shape=rect, style=filled];
-10719 [class=intent, fillcolor=lightblue, label=subsequente, shape=rect, style=filled];
-10720 [class=intent, fillcolor=lightblue, label="eletrotécnica", shape=rect, style=filled];
-10721 [class=intent, fillcolor=lightblue, label="acho que não", shape=rect, style=filled];
-10722 [class=intent, fillcolor=lightblue, label=sempre, shape=rect, style=filled];
-10723 [class=intent, fillcolor=lightblue, label="quais documentos preciso para fazer a matricula", shape=rect, style=filled];
-10724 [class=intent, fillcolor=lightblue, label="cursos integrantes do IFRS", shape=rect, style=filled];
-10725 [class=intent, fillcolor=lightblue, label="link da rematricula", shape=rect, style=filled];
-10726 [class=intent, fillcolor=lightblue, label="mostrar comprovante de matricula", shape=rect, style=filled];
-10727 [class=intent, fillcolor=lightblue, label=email, shape=rect, style=filled];
-10728 [class=intent, fillcolor=lightblue, label="materias do segundo semestre", shape=rect, style=filled];
-10729 [class=intent, fillcolor=lightblue, label="calenário academico", shape=rect, style=filled];
-10730 [class=intent, fillcolor=lightblue, label=Superior, shape=rect, style=filled];
-10731 [class=intent, fillcolor=lightblue, label=adios, shape=rect, style=filled];
-10732 [class=intent, fillcolor=lightblue, label="você é um humano?", shape=rect, style=filled];
-10733 [class=intent, fillcolor=lightblue, label="faz o que?", shape=rect, style=filled];
-0 -> 10705  [class="", key=NONE, label=""];
-0 -> 10711  [class="", key=0];
+2 [class="", fontsize=12, label=utter_examples];
+3 [class="", fontsize=12, label=utter_ask_help];
+4 [class="", fontsize=12, label=action_get_calendar];
+5 [class="", fontsize=12, label=utter_ask_more_help];
+6 [class="", fontsize=12, label=action_goodbye_and_clear_slots];
+10 [class="", fontsize=12, label=utter_ask_courses_modality];
+11 [class="", fontsize=12, label=action_get_courses];
+12 [class="", fontsize=12, label=action_get_info_course];
+20 [class="", fontsize=12, label=utter_req_to_ask];
+29 [class="", fontsize=12, label=utter_ask_modality_redo_register];
+30 [class="", fontsize=12, label=action_courses_redo_register];
+31 [class="", fontsize=12, label=action_inform_redo_register];
+48 [class="", fontsize=12, label=utter_ask_ingress_modality];
+49 [class="", fontsize=12, label=action_inform_do_register];
+65 [class="", fontsize=12, label=requirement_form];
+66 [class="", fontsize=12, label=action_get_requirements];
+82 [class="", fontsize=12, label=utter_ask_system_doc_register];
+83 [class="", fontsize=12, label=action_get_doc_register];
+99 [class="", fontsize=12, label=professor_name_form];
+100 [class="", fontsize=12, label=action_get_professor_contact];
+116 [class="", fontsize=12, label=utter_ask_classes_modality];
+117 [class="", fontsize=12, label=action_get_classes];
+118 [class="", fontsize=12, label=action_get_info_classe];
+16517 [class="", fontsize=12, label="..."];
+16520 [class="", fontsize=12, label=utter_iamabot];
+16522 [class="", fontsize=12, label=action_what_bot_do];
+16524 [class="", fontsize=12, label=utter_please_rephrase];
+16525 [class="", fontsize=12, label=utter_ask_more_help];
+16526 [class=intent, fillcolor=lightblue, label=oie, shape=rect, style=filled];
+16527 [class=intent, fillcolor=lightblue, label="início das férias de inverno", shape=rect, style=filled];
+16528 [class=intent, fillcolor=lightblue, label="quais cursos", shape=rect, style=filled];
+16529 [class=intent, fillcolor=lightblue, label=rematricola, shape=rect, style=filled];
+16530 [class=intent, fillcolor=lightblue, label="onde fazer a matrícula", shape=rect, style=filled];
+16531 [class=intent, fillcolor=lightblue, label="quero os requerimentos", shape=rect, style=filled];
+16532 [class=intent, fillcolor=lightblue, label="quero um atestado", shape=rect, style=filled];
+16533 [class=intent, fillcolor=lightblue, label="email dos professores", shape=rect, style=filled];
+16534 [class=intent, fillcolor=lightblue, label="aulas de 2022", shape=rect, style=filled];
+16535 [class=intent, fillcolor=lightblue, label=nao, shape=rect, style=filled];
+16536 [class=intent, fillcolor=lightblue, label=claro, shape=rect, style=filled];
+16537 [class=intent, fillcolor=lightblue, label=subsequente, shape=rect, style=filled];
+16538 [class=intent, fillcolor=lightblue, label=geoprocessamento, shape=rect, style=filled];
+16539 [class=intent, fillcolor=lightblue, label="cursos ofertados", shape=rect, style=filled];
+16540 [class=intent, fillcolor=lightblue, label="início das férias de verão", shape=rect, style=filled];
+16541 [class=intent, fillcolor=lightblue, label="rematricula do curso", shape=rect, style=filled];
+16542 [class=intent, fillcolor=lightblue, label="Como fazer a inscrição?", shape=rect, style=filled];
+16543 [class=intent, fillcolor=lightblue, label="justificar falta", shape=rect, style=filled];
+16544 [class=intent, fillcolor=lightblue, label="mostrar comprovante de matricula", shape=rect, style=filled];
+16545 [class=intent, fillcolor=lightblue, label="email dos prof", shape=rect, style=filled];
+16546 [class=intent, fillcolor=lightblue, label="disciplinas primeiro", shape=rect, style=filled];
+16547 [class=intent, fillcolor=lightblue, label=integrado, shape=rect, style=filled];
+16548 [class=intent, fillcolor=lightblue, label="informática", shape=rect, style=filled];
+16549 [class=intent, fillcolor=lightblue, label=Enem, shape=rect, style=filled];
+16550 [class=intent, fillcolor=lightblue, label=SIA, shape=rect, style=filled];
+16551 [class=intent, fillcolor=lightblue, label=superior, shape=rect, style=filled];
+16552 [class=intent, fillcolor=lightblue, label="pedagógica não licenciados", shape=rect, style=filled];
+16553 [class=intent, fillcolor=lightblue, label="até mais", shape=rect, style=filled];
+16554 [class=intent, fillcolor=lightblue, label="você é um robo?", shape=rect, style=filled];
+16555 [class=intent, fillcolor=lightblue, label="o que tu pode fazer?", shape=rect, style=filled];
+16556 [class=intent, fillcolor=lightblue, label="/nlu_fallback", shape=rect, style=filled];
+0 -> 16517  [class="", key=NONE, label=""];
+0 -> 16526  [class="", key=0];
 1 -> 2  [class="", key=NONE, label=""];
 2 -> 3  [class="", key=NONE, label=""];
-3 -> 4  [class="", key=NONE, label=""];
-4 -> 10712  [class="", key=0];
-4 -> 10713  [class="", key=0];
-4 -> 10714  [class="", key=0];
-4 -> 10715  [class="", key=0];
-4 -> 10716  [class="", key=0];
-4 -> 10717  [class="", key=0];
-4 -> 10718  [class="", key=0];
-5 -> 10719  [class="", key=0];
-6 -> 10720  [class="", key=0];
-7 -> 8  [class="", key=NONE, label=""];
-8 -> 10721  [class="", key=0];
-8 -> 10722  [class="", key=0];
-9 -> "-1"  [class="", key=NONE, label=""];
-14 -> 8  [class="", key=NONE, label=""];
-25 -> 10723  [class="", key=0];
-25 -> 10724  [class="", key=0];
-25 -> 10725  [class="", key=0];
-25 -> 10726  [class="", key=0];
-25 -> 10727  [class="", key=0];
-25 -> 10728  [class="", key=0];
-25 -> 10729  [class="", key=0];
-33 -> 8  [class="", key=NONE, label=""];
-52 -> 8  [class="", key=NONE, label=""];
-71 -> 72  [class="", key=NONE, label=""];
-72 -> 8  [class="", key=NONE, label=""];
-92 -> 10730  [class="", key=0];
-93 -> 8  [class="", key=NONE, label=""];
-113 -> 8  [class="", key=NONE, label=""];
-10705 -> 10731  [class="", key=0];
-10705 -> 10732  [class="", key=0];
-10705 -> 10733  [class="", key=0];
-10708 -> "-1"  [class="", key=NONE, label=""];
-10710 -> "-1"  [class="", key=NONE, label=""];
-10711 -> 1  [class="", key=0];
-10712 -> 5  [class="", key=0];
-10713 -> 14  [class="", key=0];
-10714 -> 33  [class="", key=0];
-10715 -> 52  [class="", key=0];
-10716 -> 71  [class="", key=0];
-10717 -> 92  [class="", key=0];
-10718 -> 113  [class="", key=0];
-10719 -> 6  [class="", key=0];
-10720 -> 7  [class="", key=0];
-10721 -> 9  [class="", key=0];
-10722 -> 25  [class="", key=0];
-10723 -> 14  [class="", key=0];
-10724 -> 5  [class="", key=0];
-10725 -> 33  [class="", key=0];
-10726 -> 52  [class="", key=0];
-10727 -> 71  [class="", key=0];
-10728 -> 92  [class="", key=0];
-10729 -> 113  [class="", key=0];
-10730 -> 93  [class="", key=0];
-10731 -> 9  [class="", key=0];
-10732 -> 10708  [class="", key=0];
-10733 -> 10710  [class="", key=0];
-=======
-52 [class="", fontsize=12, label=requirement_form];
-53 [class="", fontsize=12, label=action_get_requirements];
-73 [class="", fontsize=12, label=action_get_doc_register];
-92 [class="", fontsize=12, label=professor_name_form];
-93 [class="", fontsize=12, label=action_get_professor_contact];
-113 [class="", fontsize=12, label=action_get_classes];
-132 [class="", fontsize=12, label=action_get_calendar];
-15945 [class="", fontsize=12, label="..."];
-15948 [class="", fontsize=12, label=utter_iamabot];
-15950 [class="", fontsize=12, label=action_what_bot_do];
-15951 [class=intent, fillcolor=lightblue, label=eae, shape=rect, style=filled];
-15952 [class=intent, fillcolor=lightblue, label="IFRS no estado", shape=rect, style=filled];
-15953 [class=intent, fillcolor=lightblue, label="quais documentos preciso para fazer a matricula", shape=rect, style=filled];
-15954 [class=intent, fillcolor=lightblue, label="rematrícula", shape=rect, style=filled];
-15955 [class=intent, fillcolor=lightblue, label="me diz quais formulários tem", shape=rect, style=filled];
-15956 [class=intent, fillcolor=lightblue, label="quero um comprovante", shape=rect, style=filled];
-15957 [class=intent, fillcolor=lightblue, label="profs do IFRS", shape=rect, style=filled];
-15958 [class=intent, fillcolor=lightblue, label="grade curricular", shape=rect, style=filled];
-15959 [class=intent, fillcolor=lightblue, label="calendario acadêmico", shape=rect, style=filled];
-15960 [class=intent, fillcolor=lightblue, label=Superior, shape=rect, style=filled];
-15961 [class=intent, fillcolor=lightblue, label="informática", shape=rect, style=filled];
-15962 [class=intent, fillcolor=lightblue, label=n, shape=rect, style=filled];
-15963 [class=intent, fillcolor=lightblue, label=s, shape=rect, style=filled];
-15964 [class=intent, fillcolor=lightblue, label="quais documentos preciso para fazer a matricula", shape=rect, style=filled];
-15965 [class=intent, fillcolor=lightblue, label="cursos ofertados", shape=rect, style=filled];
-15966 [class=intent, fillcolor=lightblue, label="site para rematrícula", shape=rect, style=filled];
-15967 [class=intent, fillcolor=lightblue, label="formulários", shape=rect, style=filled];
-15968 [class=intent, fillcolor=lightblue, label=atestado, shape=rect, style=filled];
-15969 [class=intent, fillcolor=lightblue, label="email dos prof", shape=rect, style=filled];
-15970 [class=intent, fillcolor=lightblue, label="disciplinas primeiro", shape=rect, style=filled];
-15971 [class=intent, fillcolor=lightblue, label="férias", shape=rect, style=filled];
-15972 [class=intent, fillcolor=lightblue, label=tchau, shape=rect, style=filled];
-15973 [class=intent, fillcolor=lightblue, label="estou falando com um humano?", shape=rect, style=filled];
-15974 [class=intent, fillcolor=lightblue, label="o que você faz?", shape=rect, style=filled];
-0 -> 15945  [class="", key=NONE, label=""];
-0 -> 15951  [class="", key=0];
-1 -> 2  [class="", key=NONE, label=""];
-2 -> 3  [class="", key=NONE, label=""];
-3 -> 4  [class="", key=NONE, label=""];
-4 -> 15952  [class="", key=0];
-4 -> 15953  [class="", key=0];
-4 -> 15954  [class="", key=0];
-4 -> 15955  [class="", key=0];
-4 -> 15956  [class="", key=0];
-4 -> 15957  [class="", key=0];
-4 -> 15958  [class="", key=0];
-4 -> 15959  [class="", key=0];
-5 -> 15960  [class="", key=0];
-6 -> 15961  [class="", key=0];
-7 -> 8  [class="", key=NONE, label=""];
-8 -> 15962  [class="", key=0];
-8 -> 15963  [class="", key=0];
-9 -> "-1"  [class="", key=NONE, label=""];
-14 -> 8  [class="", key=NONE, label=""];
-25 -> 15964  [class="", key=0];
-25 -> 15965  [class="", key=0];
-25 -> 15966  [class="", key=0];
-25 -> 15967  [class="", key=0];
-25 -> 15968  [class="", key=0];
-25 -> 15969  [class="", key=0];
-25 -> 15970  [class="", key=0];
-25 -> 15971  [class="", key=0];
-33 -> 8  [class="", key=NONE, label=""];
-52 -> 53  [class="", key=NONE, label=""];
-53 -> 8  [class="", key=NONE, label=""];
-73 -> 8  [class="", key=NONE, label=""];
-92 -> 93  [class="", key=NONE, label=""];
-93 -> 8  [class="", key=NONE, label=""];
-113 -> 8  [class="", key=NONE, label=""];
-132 -> 8  [class="", key=NONE, label=""];
-15945 -> 15972  [class="", key=0];
-15945 -> 15973  [class="", key=0];
-15945 -> 15974  [class="", key=0];
-15948 -> "-1"  [class="", key=NONE, label=""];
-15950 -> "-1"  [class="", key=NONE, label=""];
-15951 -> 1  [class="", key=0];
-15952 -> 5  [class="", key=0];
-15953 -> 14  [class="", key=0];
-15954 -> 33  [class="", key=0];
-15955 -> 52  [class="", key=0];
-15956 -> 73  [class="", key=0];
-15957 -> 92  [class="", key=0];
-15958 -> 113  [class="", key=0];
-15959 -> 132  [class="", key=0];
-15960 -> 6  [class="", key=0];
-15961 -> 7  [class="", key=0];
-15962 -> 9  [class="", key=0];
-15963 -> 25  [class="", key=0];
-15964 -> 14  [class="", key=0];
-15965 -> 5  [class="", key=0];
-15966 -> 33  [class="", key=0];
-15967 -> 52  [class="", key=0];
-15968 -> 73  [class="", key=0];
-15969 -> 92  [class="", key=0];
-15970 -> 113  [class="", key=0];
-15971 -> 132  [class="", key=0];
-15972 -> 9  [class="", key=0];
-15973 -> 15948  [class="", key=0];
-15974 -> 15950  [class="", key=0];
->>>>>>> 92cc96a0248039b2a07c0d13e55a526246c8a6a3
+3 -> 16527  [class="", key=0];
+3 -> 16528  [class="", key=0];
+3 -> 16529  [class="", key=0];
+3 -> 16530  [class="", key=0];
+3 -> 16531  [class="", key=0];
+3 -> 16532  [class="", key=0];
+3 -> 16533  [class="", key=0];
+3 -> 16534  [class="", key=0];
+4 -> 5  [class="", key=NONE, label=""];
+5 -> 16535  [class="", key=0];
+5 -> 16536  [class="", key=0];
+6 -> "-1"  [class="", key=NONE, label=""];
+10 -> 16537  [class="", key=0];
+11 -> 16538  [class="", key=0];
+12 -> 5  [class="", key=NONE, label=""];
+20 -> 16539  [class="", key=0];
+20 -> 16540  [class="", key=0];
+20 -> 16541  [class="", key=0];
+20 -> 16542  [class="", key=0];
+20 -> 16543  [class="", key=0];
+20 -> 16544  [class="", key=0];
+20 -> 16545  [class="", key=0];
+20 -> 16546  [class="", key=0];
+29 -> 16547  [class="", key=0];
+30 -> 16548  [class="", key=0];
+31 -> 5  [class="", key=NONE, label=""];
+48 -> 16549  [class="", key=0];
+49 -> 5  [class="", key=NONE, label=""];
+65 -> 66  [class="", key=NONE, label=""];
+66 -> 5  [class="", key=NONE, label=""];
+82 -> 16550  [class="", key=0];
+83 -> 5  [class="", key=NONE, label=""];
+99 -> 100  [class="", key=NONE, label=""];
+100 -> 5  [class="", key=NONE, label=""];
+116 -> 16551  [class="", key=0];
+117 -> 16552  [class="", key=0];
+118 -> 5  [class="", key=NONE, label=""];
+16517 -> 16553  [class="", key=0];
+16517 -> 16554  [class="", key=0];
+16517 -> 16555  [class="", key=0];
+16517 -> 16556  [class="", key=0];
+16520 -> "-1"  [class="", key=NONE, label=""];
+16522 -> "-1"  [class="", key=NONE, label=""];
+16524 -> 16525  [class="", key=NONE, label=""];
+16525 -> "-1"  [class="", key=NONE, label=""];
+16526 -> 1  [class="", key=0];
+16527 -> 4  [class="", key=0];
+16528 -> 10  [class="", key=0];
+16529 -> 29  [class="", key=0];
+16530 -> 48  [class="", key=0];
+16531 -> 65  [class="", key=0];
+16532 -> 82  [class="", key=0];
+16533 -> 99  [class="", key=0];
+16534 -> 116  [class="", key=0];
+16535 -> 6  [class="", key=0];
+16536 -> 20  [class="", key=0];
+16537 -> 11  [class="", key=0];
+16538 -> 12  [class="", key=0];
+16539 -> 10  [class="", key=0];
+16540 -> 4  [class="", key=0];
+16541 -> 29  [class="", key=0];
+16542 -> 48  [class="", key=0];
+16543 -> 65  [class="", key=0];
+16544 -> 82  [class="", key=0];
+16545 -> 99  [class="", key=0];
+16546 -> 116  [class="", key=0];
+16547 -> 30  [class="", key=0];
+16548 -> 31  [class="", key=0];
+16549 -> 49  [class="", key=0];
+16550 -> 83  [class="", key=0];
+16551 -> 117  [class="", key=0];
+16552 -> 118  [class="", key=0];
+16553 -> 6  [class="", key=0];
+16554 -> 16520  [class="", key=0];
+16555 -> 16522  [class="", key=0];
+16556 -> 16524  [class="", key=0];
 }
 `;
     drawGraph(graph);
